[tool.poetry]
name = "repl_python3_hentai-gameming-bot"
version = "0.1.0"
description = ""
authors = ["ofoxx <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
discord = "^1.7.3"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
